--- a/templates/admin.html
+++ b/templates/admin.html
@@ -14,6 +14,7 @@
 {% endblock %}
 
 {% block content %}
+<link rel="stylesheet" href="/static/css/admin.css?v=2">
 <section class="admin-shell" data-initial-season="{{ seasons|first }}">
     <h1>Admin Panel</h1>
     <div class="admin-header-row">
@@ -35,5 +36,5 @@
     // Pass user role to JavaScript for conditional UI
     window.USER_ROLE = "{{ user_role|default:'' }}";
 </script>
-<script src="/static/js/admin.js?v=4"></script>
+<script src="/static/js/admin.js?v=5"></script>
 {% endblock %}
