--- a/templates/admin.html
+++ b/templates/admin.html
@@ -36,5 +36,5 @@
     // Pass user role to JavaScript for conditional UI
     window.USER_ROLE = "{{ user_role|default:'' }}";
 </script>
-<script src="/static/js/admin.js?v=5"></script>
+<script src="/static/js/admin.js"></script>
 {% endblock %}
