--- a/templates/auth_reset.html
+++ b/templates/auth_reset.html
@@ -3,11 +3,14 @@
 {% block content %}
 <section class="auth-login">
     <h1>Reset Password</h1>
+    {% if error %}
+    <p style="color: red;">{{ error }}</p>
+    {% endif %}
     <form method="post" action="/auth/reset">
         <input type="hidden" name="token" value="{{ token }}" />
         <label>New Password</label>
-        <input type="password" name="new_password" />
-        <button type="submit">Reset</button>
+        <input type="password" name="new_password" required minlength="8" />
+        <button type="submit">Reset Password</button>
     </form>
 </section>
 {% endblock %}
