update: enable query string versioning from commit hash

--- a/templates/admin_build_team.html
+++ b/templates/admin_build_team.html
@@ -143,5 +143,5 @@
 </div>
 
 <script type="application/json" id="raid-boss-data">{{ raid_boss_data|safe }}</script>
-<script src="/static/js/admin_boss_builder.js"></script>
+<script src="/static/js/admin_boss_builder.js?v={{ commit_hash }}"></script>
 {% endblock %}
