--- a/templates/admin.html
+++ b/templates/admin.html
@@ -17,7 +17,7 @@
 {% endblock %}
 
 {% block content %}
-<link rel="stylesheet" href="/static/css/admin.css?v=2">
+<link rel="stylesheet" href="/static/css/admin.css?v={{ commit_hash }}">
 <section class="admin-shell" data-initial-season="{% if seasons %}{{ seasons.0.Code }}{% endif %}">
     <h1>Admin Panel</h1>
     <div class="admin-header-row">
@@ -41,5 +41,5 @@
     // Pass user role to JavaScript for conditional UI
     window.USER_ROLE = "{{ user_role|default:'' }}";
 </script>
-<script src="/static/js/admin.js"></script>
+<script src="/static/js/admin.js?v={{ commit_hash }}"></script>
 {% endblock %}
