--- a/templates/index.html
+++ b/templates/index.html
@@ -79,7 +79,7 @@
     document.body.dataset.userRole = "{{ user_role|default:'' }}";
 </script>
 <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.6.2"></script>
-<script src="/static/js/checklist.js"></script>
-<script src="/static/js/boss-edit.js"></script>
-<script src="/static/js/checklist-edit.js"></script>
+<script src="/static/js/checklist.js?v={{ commit_hash }}"></script>
+<script src="/static/js/boss-edit.js?v={{ commit_hash }}"></script>
+<script src="/static/js/checklist-edit.js?v={{ commit_hash }}"></script>
 {% endblock %}
